@@ -5,12 +5,13 @@ plugins {
   id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
+applicationDefaultJvmArgs = ['--module-path="C:\Program Files\JavaFX\javafx-sdk-23.0.2\lib" --add-modules=javafx.controls,javafx.fxml']
+
 repositories {
     mavenCentral()
 }
 
 javafx {
-    version = "23"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
@@ -31,9 +32,24 @@ dependencies{
 	
 }
 
-test{
-	useJUnitPlatform()
-	testLogging.showStandardStreams = true
+sourceSets {
+    main.java.srcDirs += 'src'
+    main.resources.srcDirs += 'src'
+    test.java.srcDirs += 'test'
+    test.resources.srcDirs += 'test'
+}
+
+test {
+    // Enable JUnit 5 (Gradle 4.6+).
+    useJUnitPlatform()
+
+    // Always run tests, even when nothing changed.
+    dependsOn 'cleanTest'
+
+    // Show test results.
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 
 mainClassName = 'EM426Main'
